--- a/login.html
+++ b/login.html
@@ -1,125 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - Smart Burme</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(-45deg, #000, #1a1a1a, #000, #1a1a1a);
-      background-size: 400% 400%;
-      animation: backgroundAnim 10s ease infinite;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Smart Burme - Login</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    @keyframes backgroundAnim {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+        body {
+            background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
+            background-size: 400% 400%;
+            animation: backgroundShift 12s ease infinite;
+            font-family: 'Segoe UI', sans-serif;
+            color: white;
+            height: 100vh;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
 
-    h1 {
-      font-size: 42px;
-      font-weight: bold;
-      animation: float3D 3s ease-in-out infinite, colorShift 3s ease-in-out infinite;
-    }
+        @keyframes backgroundShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
 
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(15deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-15deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
-    }
+        .floating-title {
+            font-size: 60px;
+            font-weight: bold;
+            animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
+            text-align: center;
+            margin-bottom: 20px;
+        }
 
-    @keyframes colorShift {
-      0% { color: #ccc; }
-      50% { color: #7ec8e3; }
-      100% { color: #ccc; }
-    }
+        @keyframes float3D {
+            0% { transform: rotateY(0deg) translateY(0); }
+            25% { transform: rotateY(10deg) translateY(-10px); }
+            50% { transform: rotateY(0deg) translateY(0); }
+            75% { transform: rotateY(-10deg) translateY(10px); }
+            100% { transform: rotateY(0deg) translateY(0); }
+        }
 
-    input {
-      padding: 12px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: none;
-      width: 250px;
-      font-size: 16px;
-    }
+        @keyframes colorChange {
+            0% { color: #a0a0a0; }
+            50% { color: #00ccff; }
+            100% { color: #cccccc; }
+        }
 
-    .btn {
-      margin: 10px 0;
-      padding: 14px 28px;
-      font-size: 18px;
-      color: white;
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
-      border: none;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-      cursor: pointer;
-      transition: background-position 0.5s ease, transform 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-      width: 270px;
-      text-align: center;
-    }
+        .input-field {
+            width: 250px;
+            padding: 10px;
+            margin: 10px 0;
+            background: #222;
+            border: 1px solid #444;
+            border-radius: 5px;
+            color: white;
+            font-size: 16px;
+        }
 
-    .btn:hover {
-      background-position: right center;
-      transform: scale(1.05);
-    }
-  </style>
+        .input-field:focus {
+            outline: none;
+            border-color: #00ccff;
+        }
+
+        .buttons {
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            opacity: 0;
+            animation: buttonFade 2s ease forwards;
+            animation-delay: 2s;
+        }
+
+        @keyframes buttonFade {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .btn {
+            background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+            background-size: 200% auto;
+            color: white;
+            padding: 15px 30px;
+            border-radius: 10px;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: bold;
+            box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+            transition: background-position 0.5s, transform 0.3s;
+            text-align: center;
+        }
+
+        .btn:hover {
+            background-position: right center;
+            transform: scale(1.05);
+        }
+
+        #loader {
+            position: absolute;
+            top: 45%;
+            font-size: 20px;
+            color: #aaa;
+        }
+
+        #main-content {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
+    <div id="loader">Loading Smart Burme App...</div>
 
-  <h1>Smart Burme Login</h1>
+    <div id="main-content">
+        <div class="floating-title">Smart Burme - Login</div>
 
-  <input type="email" id="email" placeholder="Enter Email" />
-  <input type="password" id="password" placeholder="Enter Password" />
-  <button class="btn" onclick="login()">Login</button>
+        <form id="login-form">
+            <input type="email" id="email" class="input-field" placeholder="Email" required>
+            <input type="password" id="password" class="input-field" placeholder="Password" required>
+        </form>
 
-  <a href="registration.html" class="btn">Register</a>
-  <a href="forget_password.html" class="btn">Forgot Password</a>
+        <div class="buttons">
+            <a href="main.html" class="btn">Login</a>
+            <a href="registration.html" class="btn">New Account</a>
+        </div>
+    </div>
 
-  <!-- Firebase SDKs -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    window.login = () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          alert("Login Successful!");
-          window.location.href = "mail.html";
-        })
-        .catch((error) => {
-          alert("Login Failed: " + error.message);
-        });
-    };
-  </script>
-
+    <script>
+        // Loading UI logic
+        setTimeout(() => {
+            document.getElementById('loader').style.display = 'none';
+            document.getElementById('main-content').style.display = 'flex';
+        }, 3000); // 3 seconds loading
+    </script>
 </body>
 </html>
