--- a/login.html
+++ b/login.html
@@ -1,145 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Burme - Login</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme - Login</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body {
-            background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
-            background-size: 400% 400%;
-            animation: backgroundShift 12s ease infinite;
-            font-family: 'Segoe UI', sans-serif;
-            color: white;
-            height: 100vh;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
+    body {
+      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
+      background-size: 400% 400%;
+      animation: backgroundShift 12s ease infinite;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
-        @keyframes backgroundShift {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
+    @keyframes backgroundShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-        .floating-title {
-            font-size: 60px;
-            font-weight: bold;
-            animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
-            text-align: center;
-            margin-bottom: 20px;
-        }
+    .floating-title {
+      font-size: 60px;
+      font-weight: bold;
+      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-        @keyframes float3D {
-            0% { transform: rotateY(0deg) translateY(0); }
-            25% { transform: rotateY(10deg) translateY(-10px); }
-            50% { transform: rotateY(0deg) translateY(0); }
-            75% { transform: rotateY(-10deg) translateY(10px); }
-            100% { transform: rotateY(0deg) translateY(0); }
-        }
+    @keyframes float3D {
+      0% { transform: rotateY(0deg) translateY(0); }
+      25% { transform: rotateY(10deg) translateY(-10px); }
+      50% { transform: rotateY(0deg) translateY(0); }
+      75% { transform: rotateY(-10deg) translateY(10px); }
+      100% { transform: rotateY(0deg) translateY(0); }
+    }
 
-        @keyframes colorChange {
-            0% { color: #a0a0a0; }
-            50% { color: #00ccff; }
-            100% { color: #cccccc; }
-        }
+    @keyframes colorChange {
+      0% { color: #a0a0a0; }
+      50% { color: #00ccff; }
+      100% { color: #cccccc; }
+    }
 
-        .input-field {
-            width: 250px;
-            padding: 10px;
-            margin: 10px 0;
-            background: #222;
-            border: 1px solid #444;
-            border-radius: 5px;
-            color: white;
-            font-size: 16px;
-        }
+    .form-container {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+    }
 
-        .input-field:focus {
-            outline: none;
-            border-color: #00ccff;
-        }
+    .input-field {
+      padding: 15px;
+      font-size: 18px;
+      border-radius: 10px;
+      border: 1px solid #333;
+      width: 300px;
+      margin-top: 10px;
+      color: white;
+      background-color: #444;
+    }
 
-        .buttons {
-            margin-top: 30px;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            opacity: 0;
-            animation: buttonFade 2s ease forwards;
-            animation-delay: 2s;
-        }
+    .btn {
+      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+      background-size: 200% auto;
+      color: white;
+      padding: 15px 30px;
+      border-radius: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      text-decoration: none;
+      text-align: center;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+      transition: background-position 0.5s ease, transform 0.3s;
+    }
 
-        @keyframes buttonFade {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .btn {
-            background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-            background-size: 200% auto;
-            color: white;
-            padding: 15px 30px;
-            border-radius: 10px;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: bold;
-            box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-            transition: background-position 0.5s, transform 0.3s;
-            text-align: center;
-        }
-
-        .btn:hover {
-            background-position: right center;
-            transform: scale(1.05);
-        }
-
-        #loader {
-            position: absolute;
-            top: 45%;
-            font-size: 20px;
-            color: #aaa;
-        }
-
-        #main-content {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-        }
-    </style>
+    .btn:hover {
+      background-position: right center;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
-    <div id="loader">Loading Smart Burme App...</div>
 
-    <div id="main-content">
-        <div class="floating-title">Smart Burme - Login</div>
+  <div class="floating-title">Smart Burme - Login</div>
 
-        <form id="login-form">
-            <input type="email" id="email" class="input-field" placeholder="Email" required>
-            <input type="password" id="password" class="input-field" placeholder="Password" required>
-        </form>
+  <div class="form-container">
+    <input type="email" id="email" class="input-field" placeholder="Email" required />
+    <input type="password" id="password" class="input-field" placeholder="Password" required />
+    <button class="btn" id="loginButton">Login</button>
+    <p><a href="registration.html" class="btn">New Account? Register here</a></p>
+  </div>
 
-        <div class="buttons">
-            <a href="main.html" class="btn">Login</a>
-            <a href="registration.html" class="btn">New Account</a>
-        </div>
-    </div>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+  <script>
+    // Firebase Configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
 
-    <script>
-        // Loading UI logic
-        setTimeout(() => {
-            document.getElementById('loader').style.display = 'none';
-            document.getElementById('main-content').style.display = 'flex';
-        }, 3000); // 3 seconds loading
-    </script>
+    // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.getAuth(app);
+
+    // Login button event listener
+    document.getElementById('loginButton').addEventListener('click', () => {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      if (email && password) {
+        firebase.signInWithEmailAndPassword(auth, email, password)
+          .then((userCredential) => {
+            const user = userCredential.user;
+            alert("Login successful!");
+            window.location.href = "main.html"; // Redirect to main page
+          })
+          .catch((error) => {
+            const errorCode = error.code;
+            const errorMessage = error.message;
+            alert(`Error: ${errorMessage}`);
+          });
+      } else {
+        alert("Please enter email and password.");
+      }
+    });
+  </script>
+
 </body>
 </html>
