--- a/registration.html
+++ b/registration.html
@@ -1,125 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register - Smart Burme</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(-45deg, #000, #1a1a1a, #000, #1a1a1a);
-      background-size: 400% 400%;
-      animation: backgroundAnim 10s ease infinite;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme - New Account</title>
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
+      background-size: 400% 400%;
+      animation: backgroundShift 12s ease infinite;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      height: 100vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
 
-    @keyframes backgroundAnim {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+    @keyframes backgroundShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-    h1 {
-      font-size: 42px;
-      font-weight: bold;
-      animation: float3D 3s ease-in-out infinite, colorShift 3s ease-in-out infinite;
-    }
+    .floating-title {
+      font-size: 60px;
+      font-weight: bold;
+      animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-    @keyframes float3D {
-      0% { transform: rotateY(0deg) translateY(0); }
-      25% { transform: rotateY(15deg) translateY(-10px); }
-      50% { transform: rotateY(0deg) translateY(0); }
-      75% { transform: rotateY(-15deg) translateY(10px); }
-      100% { transform: rotateY(0deg) translateY(0); }
-    }
+    @keyframes float3D {
+      0% { transform: rotateY(0deg) translateY(0); }
+      25% { transform: rotateY(10deg) translateY(-10px); }
+      50% { transform: rotateY(0deg) translateY(0); }
+      75% { transform: rotateY(-10deg) translateY(10px); }
+      100% { transform: rotateY(0deg) translateY(0); }
+    }
 
-    @keyframes colorShift {
-      0% { color: #ccc; }
-      50% { color: #7ec8e3; }
-      100% { color: #ccc; }
-    }
+    @keyframes colorChange {
+      0% { color: #a0a0a0; }
+      50% { color: #00ccff; }
+      100% { color: #cccccc; }
+    }
 
-    input {
-      padding: 12px;
-      margin: 8px 0;
-      border-radius: 8px;
-      border: none;
-      width: 250px;
-      font-size: 16px;
-    }
+    .registration-form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
 
-    .btn {
-      margin: 10px 0;
-      padding: 14px 28px;
-      font-size: 18px;
-      color: white;
-      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
-      background-size: 200% auto;
-      border: none;
-      border-radius: 8px;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-      cursor: pointer;
-      transition: background-position 0.5s ease, transform 0.3s ease;
-      text-decoration: none;
-      display: inline-block;
-      width: 270px;
-      text-align: center;
-    }
+    .input-field {
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #fff;
+      background: transparent;
+      color: white;
+      font-size: 18px;
+    }
 
-    .btn:hover {
-      background-position: right center;
-      transform: scale(1.05);
-    }
-  </style>
+    .btn {
+      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+      background-size: 200% auto;
+      color: white;
+      padding: 15px 30px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-size: 18px;
+      font-weight: bold;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
+      transition: background-position 0.5s, transform 0.3s;
+      text-align: center;
+    }
+
+    .btn:hover {
+      background-position: right center;
+      transform: scale(1.05);
+    }
+
+    .login-btn {
+      text-align: center;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
+  <div class="floating-title">New Account</div>
 
-  <h1>Smart Burme Register</h1>
+  <div class="registration-form">
+    <input type="email" class="input-field" id="email" placeholder="Enter your email" required />
+    <input type="password" class="input-field" id="password" placeholder="Enter your password" required />
+    <input type="password" class="input-field" id="confirm-password" placeholder="Confirm your password" required />
+    <a href="main.html" class="btn" id="register-btn">Register</a>
+  </div>
 
-  <input type="email" id="email" placeholder="Enter Email" />
-  <input type="password" id="password" placeholder="Enter Password" />
-  <button class="btn" onclick="register()">Register</button>
+  <div class="login-btn">
+    <p>Already have an account? <a href="login.html" class="btn">Login</a></p>
+  </div>
 
-  <a href="login.html" class="btn">Back to Login</a>
-  <a href="forget_password.html" class="btn">Forgot Password</a>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
 
-  <!-- Firebase SDKs -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
+    };
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
+    const app = firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+    document.querySelector('#register-btn').addEventListener('click', (e) => {
+      e.preventDefault();
+      const email = document.querySelector('#email').value;
+      const password = document.querySelector('#password').value;
+      const confirmPassword = document.querySelector('#confirm-password').value;
 
-    window.register = () => {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      createUserWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          alert("Registration Successful!");
-          window.location.href = "mail.html";
-        })
-        .catch((error) => {
-          alert("Registration Failed: " + error.message);
-        });
-    };
-  </script>
+      if (password !== confirmPassword) {
+        alert("Passwords do not match!");
+        return;
+      }
 
+      auth.createUserWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          // User registered successfully
+          window.location.href = 'main.html';
+        })
+        .catch((error) => {
+          alert("Registration failed: " + error.message);
+        });
+    });
+  </script>
 </body>
 </html>
