--- a/registration.html
+++ b/registration.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme - New Account</title>
+  <title>New Account</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
+
     body {
       background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #000000, #262626);
       background-size: 400% 400%;
-      animation: backgroundShift 12s ease infinite;
-      font-family: 'Segoe UI', sans-serif;
+      animation: backgroundShift 10s ease infinite;
       color: white;
+      font-family: 'Segoe UI', sans-serif;
       height: 100vh;
-      overflow: hidden;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -27,11 +29,10 @@
     }
 
     .floating-title {
-      font-size: 60px;
+      font-size: 48px;
       font-weight: bold;
+      margin-bottom: 30px;
       animation: float3D 4s ease-in-out infinite, colorChange 6s infinite alternate;
-      text-align: center;
-      margin-bottom: 20px;
     }
 
     @keyframes float3D {
@@ -48,33 +49,30 @@
       100% { color: #cccccc; }
     }
 
-    .registration-form {
+    form {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 15px;
+      width: 300px;
     }
 
-    .input-field {
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #fff;
-      background: transparent;
-      color: white;
-      font-size: 18px;
+    input {
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
     }
 
     .btn {
       background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
       background-size: 200% auto;
       color: white;
-      padding: 15px 30px;
-      border-radius: 10px;
-      text-decoration: none;
-      font-size: 18px;
       font-weight: bold;
-      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
-      transition: background-position 0.5s, transform 0.3s;
+      border-radius: 8px;
+      padding: 12px;
       text-align: center;
+      text-decoration: none;
+      transition: background-position 0.5s, transform 0.3s;
     }
 
     .btn:hover {
@@ -82,30 +80,35 @@
       transform: scale(1.05);
     }
 
-    .login-btn {
+    .login-link {
+      margin-top: 10px;
       text-align: center;
-      margin-top: 20px;
+    }
+
+    .login-link a {
+      color: #00d4ff;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
+
   <div class="floating-title">New Account</div>
 
-  <div class="registration-form">
-    <input type="email" class="input-field" id="email" placeholder="Enter your email" required />
-    <input type="password" class="input-field" id="password" placeholder="Enter your password" required />
-    <input type="password" class="input-field" id="confirm-password" placeholder="Confirm your password" required />
-    <a href="main.html" class="btn" id="register-btn">Register</a>
+  <form id="registerForm">
+    <input type="email" id="email" placeholder="Email" required />
+    <input type="password" id="password" placeholder="Password" required />
+    <button type="submit" class="btn">Create Account</button>
+  </form>
+
+  <div class="login-link">
+    Already have an account? <a href="login.html">Login</a>
   </div>
 
-  <div class="login-btn">
-    <p>Already have an account? <a href="login.html" class="btn">Login</a></p>
-  </div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
 
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
-
-  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
       authDomain: "smart-burme-app.firebaseapp.com",
@@ -115,27 +118,22 @@
       appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
     };
 
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-    document.querySelector('#register-btn').addEventListener('click', (e) => {
+    const form = document.getElementById("registerForm");
+    form.addEventListener("submit", (e) => {
       e.preventDefault();
-      const email = document.querySelector('#email').value;
-      const password = document.querySelector('#password').value;
-      const confirmPassword = document.querySelector('#confirm-password').value;
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
 
-      if (password !== confirmPassword) {
-        alert("Passwords do not match!");
-        return;
-      }
-
-      auth.createUserWithEmailAndPassword(email, password)
+      createUserWithEmailAndPassword(auth, email, password)
         .then((userCredential) => {
-          // User registered successfully
-          window.location.href = 'main.html';
+          alert("Account created successfully!");
+          window.location.href = "login.html";
         })
         .catch((error) => {
-          alert("Registration failed: " + error.message);
+          alert("Error: " + error.message);
         });
     });
   </script>
